Attempt to fix chart height on mobile.

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -5,7 +5,7 @@
 }
 
 .chart-holder {
-  height:70vh;
+  height:70vh !important;
 }
 
 .realtimeTopRow {
